# ApplicantProject

./: .gitignore  pyproject.toml
ApplicantBase/applicants/: apps.py  models.py  urls.py  views.py
ApplicantBase/applicants/migrations/: 0001_initial.py
ApplicantBase/applicants/templates/: applicant_detail_view.html  applicant_form.html  applicants_list.html  base.html  index.html
ApplicantBase/config/: settings.py  urls.py
