[project]
name = "applicantproject"
version = "0.1.0"
description = ""
authors = [
    {name = "helmut",email = "helmut.andrey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "django-extension (>=0.1.0,<0.2.0)",
    "django-shell-plus (>=1.1.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
